--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt -qq update
-        sudo apt install -y kpartx
+        sudo apt install -y kpartx libpixman-1-dev
         ./create-rpxc.sh
     - name: Build image
       run: |
