--- a/.github/workflows/triggered-build.yml
+++ b/.github/workflows/triggered-build.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt -qq update
-        sudo apt install -y kpartx libpixman-1-dev
+        sudo apt install -y kpartx
         ./create-rpxc.sh
         python -m pip install --upgrade pip
         python -m pip install awscli
